# Liftoff2026

./: README.md  pyproject.toml
backend/: pyproject.toml
backend/et_translator/: __main__.py  grammar.py  image_scraper.py  recorder.py
backend/et_translator/frontend/src/: module-info.java
backend/et_translator/frontend/src/pkgETTranslator/: SentenceDisplay.java  TranslatorReader.java
et_translator/: __main__.py  grammar.py  image_scraper.py  recorder.py
frontend/: .project  ChosenImages.txt
frontend/src/pkgETTranslator/: ImageSelection.java  MiddleMan.java  RecordSentence.java  SentenceDisplay.java  TranslatorFrame.java  TranslatorReader.java  Word.java
